<resources>
    <string name="app_name">Timelessly</string>
    <string name="camera_roll">Camera Roll</string>
    <string name="camera_item">camera_item</string>
    <string name="title_activity_main2">title_2</string>
    <string name="previous">previous</string>
    <string name="hello_first_fragment">hello_first</string>
    <string name="next">next</string>
    <string name="first_fragment_label">first_label</string>
    <string name="second_fragment_label">second_label</string>
    <string name="title_activity_floating_button">floating_button</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="return_home">Return to Home</string>
    <string name="sample_patient">Sample Patient</string>
    <string name="confirm_patient">Confirm</string>
    <string name="patient_profile_picture">Patient\'s Profile Picture</string>
    <string name="search_names">Search Names</string>
    <string name="search_patients">Search Patients</string>
    <string name="title_activity_profile_creation">Patient Registration</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="upload">UPLOAD</string>
    <string name="register_new_patient">Register New Patient</string>
    <string name="register">Register</string>
    <string name="add_patient">Add Patient</string>
</resources>
