<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/selected_patient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sample_patient"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/selected_patient_pfp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/patient_profile_picture"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/selected_patient_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/confirm_patient"
        android:textSize="18sp" />

</LinearLayout>